// dashboard__dashboard_overview/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package cfg.v1.dashboard_overview;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";


message SystemMetrics {
}

message UserStatistics {
}

message StatCardsitem {
}

message SystemHealthitem {
}

message QuickActionsitem {
}

message RecentActivityitem {
}

message Dashboardoverview {

  message SystemMetrics {
  }

  message UserStatistics {
  }

  repeated StatCardsitem stat_cards = 1;
  repeated SystemHealthitem system_health = 2;
  repeated QuickActionsitem quick_actions = 3;
  repeated RecentActivityitem recent_activity = 4;
  SystemMetrics system_metrics = 5;
  UserStatistics user_statistics = 6;
  string timestamp = 7;
}