// api__profiles/messages.proto
// Generated by django-cfg django_client module
// DO NOT EDIT - This file is auto-generated

syntax = "proto3";

package profiles.v1.profiles;

import "google/protobuf/timestamp.proto";


message Resultsitem {
}

message Paginateduserprofilelist {

  int64 count = 1;
  int64 page = 2;
  int64 pages = 3;
  int64 page_size = 4;
  bool has_next = 5;
  bool has_previous = 6;
  optional int64 next_page = 7;
  optional int64 previous_page = 8;
  repeated Resultsitem results = 9;
}

message UserInfo {
}

message Userprofile {

  message UserInfo {
  }

  int64 id = 1;
  int64 user = 2;
  UserInfo user_info = 3;
  optional string website = 4;
  optional string github = 5;
  optional string twitter = 6;
  optional string linkedin = 7;
  optional string company = 8;
  optional string job_title = 9;
  int64 posts_count = 10;
  int64 comments_count = 11;
  int64 orders_count = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message Userprofilerequest {

  optional string website = 1;
  optional string github = 2;
  optional string twitter = 3;
  optional string linkedin = 4;
  optional string company = 5;
  optional string job_title = 6;
}

message Userprofileupdaterequest {

  optional string website = 1;
  optional string github = 2;
  optional string twitter = 3;
  optional string linkedin = 4;
  optional string company = 5;
  optional string job_title = 6;
}

message Userprofileupdate {

  optional string website = 1;
  optional string github = 2;
  optional string twitter = 3;
  optional string linkedin = 4;
  optional string company = 5;
  optional string job_title = 6;
}

message Patcheduserprofileupdaterequest {

  optional string website = 1;
  optional string github = 2;
  optional string twitter = 3;
  optional string linkedin = 4;
  optional string company = 5;
  optional string job_title = 6;
}

message Patcheduserprofilerequest {

  optional string website = 1;
  optional string github = 2;
  optional string twitter = 3;
  optional string linkedin = 4;
  optional string company = 5;
  optional string job_title = 6;
}

message MostActiveUsersitem {
}

message Userprofilestats {

  int64 total_profiles = 1;
  int64 profiles_with_company = 2;
  int64 profiles_with_social_links = 3;
  repeated MostActiveUsersitem most_active_users = 4;
}